kubeapp-ide/algorithm/yamls/algorithm-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
    name: algorithm
    labels:
        env: algorithm
