kubeapp-ide/algorithm/yamls/algo-segment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: algo-segment-svc
  namespace: algorithm
  labels:
    app: algo-segment-svc
spec:
  selector: 
    app: algo-segment
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
