kubeapp-ide/algorithm/yamls/default-backend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: default-http-backend
  namespace: algorithm
spec:
  selector:
    app: default-http-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
