kubeapp-ide/algorithm/yamls/nginx-ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller-svc
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: nginx-ingress-controller
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 32223
