kubeapp-ide/algorithm/yamls/algo-segment-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: algo-segment
  namespace: algorithm
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.bdp.algorithm
    http:
      paths:
      - path: /segmentation
        backend: 
          serviceName: algo-segment-svc
          servicePort: 80
